# ChelseaQuant.com

./: CMakeLists.txt  IBConnector.cpp  IBConnector.h  MarketData.cpp  MarketData.h  README.md  Statistics.cpp  Statistics.h  TradeExecution.cpp  TradeExecution.h  TradingAlgorithm.cpp  TradingAlgorithm.h  main.cpp
